# dvt-relayer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml
src/: app.py  app_state.py  main.py
src/common/: checks.py  clients.py  consensus.py  contracts.py  setup_logging.py  tasks.py  typings.py  utils.py
src/config/: networks.py  settings.py
src/network_validators/: database.py  execution.py  tasks.py  typings.py
src/protocol_config/: tasks.py
src/relayer/: endpoints.py  public_keys.py  schema.py  typings.py  validators_manager.py
src/relayer/tests/: test_endpoints.py  test_public_keys.py
src/validators/: database.py  endpoints.py  execution.py  exit_signature.py  fields.py  key_shares.py  oracle_shares.py  proof.py  schema.py  signing.py  tasks.py  typings.py  utils.py  validators.py
src/validators/tests/: dvt-nodes.py  key_shares.py
src/validators/tests/keystores/: local.py  typings.py
